--- a/pages/index.css
+++ b/pages/index.css
@@ -2,3 +2,15 @@
 
 @import url(../vendor/fonts/fonts.css);
 
+@import url(../blocks/root/root.css);
+@import url(../blocks/root/__section/root__section.css);
+
+@import url(../blocks/link/link.css);
+
+@import url(../blocks/header/header.css);
+@import url(../blocks/header/__logo/header__logo.css);
+@import url(../blocks/header/__lang-links/header__lang-links.css);
+@import url(../blocks/header/__lang-link/header__lang-link.css);
+@import url(../blocks/header/__lang-link/_active/header__lang-link_active.css);
+
+
