--- a/pages/index.css
+++ b/pages/index.css
@@ -8,9 +8,44 @@
 @import url(../blocks/link/link.css);
 
 @import url(../blocks/header/header.css);
+@import url(../blocks/header/_padding_top_margin_bottom/header_padding_top_margin_bottom.css);
 @import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/header/__lang-links/header__lang-links.css);
 @import url(../blocks/header/__lang-link/header__lang-link.css);
 @import url(../blocks/header/__lang-link/_active/header__lang-link_active.css);
 
+@import url(../blocks/lead/lead.css);
+@import url(../blocks/lead/_margin_bottom/lead_margin_bottom.css);
+@import url(../blocks/lead/__title/lead__title.css);
+@import url(../blocks/lead/__subtitle/lead__subtitle.css);
+@import url(../blocks/lead/__img_text/lead__img_text.css);
+@import url(../blocks/lead/__image/lead__image.css);
+@import url(../blocks/lead/__caption/lead__caption.css);
+
+
+/*
+@import url(../);
+@import url(../);
+@import url(../);
+@import url(../);
+@import url(../);
+@import url(../);
+@import url(../);
+@import url(../);
+@import url(../);
+@import url(../);
+@import url(../);
+@import url(../);
+@import url(../);
+@import url(../);
+@import url(../);
+@import url(../);
+@import url(../);
+@import url(../);
+@import url(../);
+@import url(../);
+@import url(../);
+@import url(../);
+@import url(../);
+*/
 
