--- a/pages/index.css
+++ b/pages/index.css
@@ -28,6 +28,8 @@
 @import url(../blocks/intro/__list/intro__list.css);
 @import url(../blocks/intro/__list/_bold/intro__list_bold.css);
 
+@import url(../blocks/photo-grid/photo-grid.css);
+@import url(../blocks/photo-grid/__item/photo-grid__item.css);
 
 /*
 @import url(../);
