--- a/pages/index.css
+++ b/pages/index.css
@@ -31,6 +31,18 @@
 @import url(../blocks/photo-grid/photo-grid.css);
 @import url(../blocks/photo-grid/__item/photo-grid__item.css);
 
+@import url(../blocks/places/places.css);
+@import url(../blocks/places/__list/places__list.css);
+@import url(../blocks/places/__place/places__place.css);
+@import url(../blocks/places/__title/places__title.css);
+@import url(../blocks/places/__website/places__website.css);
+@import url(../blocks/places/__url-heading/places__url-heading.css);
+@import url(../blocks/places/__url-value/places__url-value.css);
+@import url(../blocks/places/__image/places__image.css);
+@import url(../blocks/places/__description/places__description.css);
+@import url(../blocks/places/__description-paragraph/places__description-paragraph.css);
+
+
 /*
 @import url(../);
 */
