--- a/pages/index.css
+++ b/pages/index.css
@@ -42,6 +42,12 @@
 @import url(../blocks/places/__description/places__description.css);
 @import url(../blocks/places/__description-paragraph/places__description-paragraph.css);
 
+@import url(../blocks/cover/cover.css);
+@import url(../blocks/cover/__card/cover__card.css);
+@import url(../blocks/cover/__title/cover__title.css);
+@import url(../blocks/cover/__subtitle/cover__subtitle.css);
+@import url(../blocks/cover/__background/cover__background.css);
+
 
 /*
 @import url(../);
