add ul for list header & footer, fix image in cover

--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -1,5 +1,6 @@
 .cover__background {
   position: absolute;
+  display: block;
   top: 0;
   left: 0;
   right: 0;
@@ -8,6 +9,5 @@
   max-width: 100%;
   height: 100%;
   width: 100%;
-  object-fit: contain;
-  display: block;
+  object-fit: cover;
 }
