--- a/blocks/header/_padding_top_margin_bottom/header_padding_top_margin_bottom.css
+++ b/blocks/header/_padding_top_margin_bottom/header_padding_top_margin_bottom.css
@@ -2,3 +2,9 @@
   padding-top: 28px;
   margin-bottom: 56px;
 }
+
+@media screen and (max-width: 1279px) {
+  .header_padding_top_margin_bottom {
+    margin-bottom: 48px;
+  }
+}
