--- a/blocks/places/__image/places__image.css
+++ b/blocks/places/__image/places__image.css
@@ -1,6 +1,12 @@
 .places__image {
   grid-area: image;
-  width: 460px;
+  width: 100%;
   height: 460px;
   object-fit: cover;
+}
+
+@media screen and (max-width: 1279px) {
+  .places__image {
+    height: 440px;
+  }
 }
