--- a/blocks/cover/__card/cover__card.css
+++ b/blocks/cover/__card/cover__card.css
@@ -33,3 +33,9 @@
 .cover__card:hover:before {
   opacity: 0.8;
 }
+
+@media screen and (max-width: 1279px) {
+  .cover__card {
+    height: 640px;
+  }
+}
