--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,3 +1,21 @@
 .cover {
+  max-width: calc(1280px - 48px*2);
+}
 
+@media screen and (max-width: 1279px) {
+  .cover {
+    max-width: 1024px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .cover {
+    max-width: 768px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .cover {
+    max-width: 320px;
+  }
 }
