--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,6 +1,25 @@
 .footer {
+  max-width: calc(1280px - 48px*2);
   padding-bottom: 24px;
   display: flex;
   justify-content: space-between;
   align-content: center;
+}
+
+@media screen and (max-width: 1279px) {
+  .footer {
+    max-width: calc(1024px - 48px * 2);
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .footer {
+    max-width: calc(768px - 24px * 2);
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .footer {
+    max-width: calc(320px - 16px * 2);
+  }
 }
