--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,4 +1,23 @@
 .header {
+  max-width: calc(1280px - 48px*2);
   display: flex;
   justify-content: space-between;
+}
+
+@media screen and (max-width: 1279px) {
+  .header {
+    max-width: calc(1024px - 48px * 2);
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .header {
+    max-width: calc(768px - 24px * 2);
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .header {
+    max-width: calc(320px - 16px * 2);
+  }
 }
