--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,11 +1,8 @@
 .lead__caption {
   margin: 0;
-  width: 158px;
-  height: 14px;
-  text-align: justify;
   line-height: 1.4;
   font-size: 10px;
   font-weight: normal;
-  letter-spacing: 1.4px;
-  color: white;
+  letter-spacing: 1.5px;
+  color: #fff;
 }
