--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -6,5 +6,11 @@
   line-height: 1.2;
   font-size: 30px;
   font-weight: normal;
-  color: white;
+  color: #fff;
+}
+
+@media screen and (max-width: 1279px) {
+  .lead__subtitle {
+    margin: 0 auto 56px;
+  }
 }
