--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,3 +1,21 @@
 .lead {
+  max-width: calc(1280px - 148px*2);
+}
 
+@media screen and (max-width: 1279px) {
+  .lead {
+    max-width: calc(1024px - 48px * 2);
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .lead {
+    max-width: 768px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .lead {
+    max-width: 320px;
+  }
 }
