--- a/blocks/link/link.css
+++ b/blocks/link/link.css
@@ -1,7 +1,7 @@
 .link {
-  transition: opacity .5s ease-out 50ms;
+  transition: opacity .2s ease-in-out;
 }
 
 .link:hover {
-  opacity: .5;
+  opacity: .8;
 }
