--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,5 +1,28 @@
 .photo-grid {
+  max-width: calc(1280px - 48px*2);
   display: grid;
-  grid-template: repeat(3, 1fr) / repeat(4, 1fr);
+  grid-template-rows: repeat(3, 213px);
+  grid-template-columns: repeat(4, 1fr);
   gap: 16px;
+}
+
+@media screen and (max-width: 1279px) {
+  .photo-grid {
+    max-width: calc(1024px - 48px * 2);
+    grid-template-rows: repeat(4, 225px);
+    grid-template-columns: repeat(3, 1fr);
+    gap: 14px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .photo-grid {
+    max-width: calc(768px - 24px * 2);
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .photo-grid {
+    max-width: calc(320px - 16px * 2);
+  }
 }
