--- a/blocks/places/__description-paragraph/places__description-paragraph.css
+++ b/blocks/places/__description-paragraph/places__description-paragraph.css
@@ -3,9 +3,15 @@
   line-height: 29px;
   font-size: 18px;
   font-weight: normal;
-  color: white;
+  color: #fff;
 }
 
 .places__description-paragraph:last-of-type {
   margin: 0;
 }
+
+/*@media screen and (max-width: 1279px) {
+  .places__description-paragraph {
+
+  }
+}*/
