--- a/blocks/places/__place/places__place.css
+++ b/blocks/places/__place/places__place.css
@@ -4,7 +4,7 @@
   max-height: 660px;
   display: grid;
   grid-template-rows: repeat(2, minmax(min-content, max-content));
-  grid-template-columns: minmax(1fr, max-content) minmax(min-content, max-content);
+  grid-template-columns: 460px minmax(min-content, max-content);
   grid-template-areas:
     'title website'
     'image description';
@@ -14,4 +14,11 @@
 
 .places__place:last-of-type {
   margin-bottom: 0;
+}
+
+@media screen and (max-width: 1279px) {
+  .places__place {
+    grid-template-columns: 440px minmax(min-content, max-content);
+    column-gap: 32px;
+  }
 }
