--- a/blocks/places/__title/places__title.css
+++ b/blocks/places/__title/places__title.css
@@ -2,9 +2,8 @@
   grid-area: title;
   align-self: end;
   margin: 0;
-  width: 460px;
   line-height: 76px;
   font-size: 72px;
   font-weight: 900;
-  color: white;
+  color: #fff;
 }
