--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,3 +1,21 @@
 .places {
+  max-width: calc(1280px - 148px*2);
+}
 
+@media screen and (max-width: 1279px) {
+  .places {
+    max-width: calc(1024px - 48px * 2);
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .places {
+    max-width: calc(768px - 24px * 2);
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .places {
+    max-width: 320px;
+  }
 }
