--- a/blocks/header/_padding_top_margin_bottom/header_padding_top_margin_bottom.css
+++ b/blocks/header/_padding_top_margin_bottom/header_padding_top_margin_bottom.css
@@ -8,3 +8,9 @@
     margin-bottom: 48px;
   }
 }
+
+@media screen and (max-width: 767px) {
+  .header_padding_top_margin_bottom {
+    padding-top: 16px;
+  }
+}
