--- a/blocks/root/__section/_margin_bottom/root__section_margin_bottom.css
+++ b/blocks/root/__section/_margin_bottom/root__section_margin_bottom.css
@@ -1,3 +1,15 @@
 .root__section_margin_bottom {
   margin-bottom: 92px;
 }
+
+@media screen and (max-width: 1023px) {
+  .root__section_margin_bottom{
+    margin-bottom: 88px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .root__section_margin_bottom {
+    margin-bottom: 64px;
+  }
+}
