--- a/blocks/cover/__card/cover__card.css
+++ b/blocks/cover/__card/cover__card.css
@@ -11,7 +11,6 @@
   overflow: hidden;
   color: #fff;
   text-decoration: none;
-/*  min-height: 300px;*/
 }
 
 .cover__card:before {
@@ -37,5 +36,17 @@
 @media screen and (max-width: 1279px) {
   .cover__card {
     height: 640px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .cover__card {
+    height: 480px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .cover__card {
+    height: 200px;
   }
 }
