--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -7,3 +7,12 @@
   font-size: 18px;
   font-weight: 400;
 }
+
+@media screen and (max-width: 767px) {
+  .cover__subtitle {
+    width: 260px;
+    height: 48px;
+    line-height: 16px;
+    font-size: 14px;
+  }
+}
