--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -7,3 +7,13 @@
   font-size: 72px;
   font-weight: 900;
 }
+
+@media screen and (max-width: 767px) {
+  .cover__title {
+    margin: 0 auto 16px;
+    width: 250px;
+    height: 70px;
+    line-height: 35px;
+    font-size: 32px;
+  }
+}
