--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -5,3 +5,9 @@
   font-weight: 400;
   color: #fff;
 }
+
+@media screen and (max-width: 767px) {
+  .footer__copyright {
+    line-height: 14px;
+  }
+}
