--- a/blocks/footer/__item/footer__item.css
+++ b/blocks/footer/__item/footer__item.css
@@ -6,3 +6,14 @@
 .footer__item:last-of-type {
   margin-right: 0;
 }
+
+@media screen and (max-width: 767px) {
+  .footer__item {
+    margin-right: 0;
+    margin-bottom: 38px;
+  }
+
+  .footer__item:last-of-type {
+    margin-bottom: 0;
+  }
+}
