--- a/blocks/footer/__items/footer__items.css
+++ b/blocks/footer/__items/footer__items.css
@@ -2,6 +2,12 @@
   margin: 0;
   padding-left: 0;
   list-style-type: none;
-  height: 18px;
   display: flex;
+}
+
+@media screen and (max-width: 767px) {
+  .footer__items {
+    flex-direction: column;
+    margin-bottom: 54px;
+  }
 }
