--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -5,3 +5,10 @@
   font-weight: 400;
   color: #fff;
 }
+
+@media screen and (max-width: 767px) {
+  .footer__link {
+    line-height: 24px;
+    font-size: 24px;
+  }
+}
