--- a/blocks/header/__item/header__item.css
+++ b/blocks/header/__item/header__item.css
@@ -6,3 +6,9 @@
 .header__item:last-of-type {
   margin-right: 0;
 }
+
+@media screen and (max-width: 767px) {
+  .header__item {
+    height: 20px;
+  }
+}
