--- a/blocks/header/__items/header__items.css
+++ b/blocks/header/__items/header__items.css
@@ -5,3 +5,10 @@
   height: 28px;
   display: flex;
 }
+
+@media screen and (max-width: 767px) {
+  .header__items {
+    margin: 14px 0 0;
+    height: 20px;
+  }
+}
