--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,6 +1,13 @@
 .header__lang-link {
   text-decoration: none;
-  font-size: 24px;
   line-height: 28px;
+  font-size: 24px;
   color: #fff;
+}
+
+@media screen and (max-width: 767px) {
+  .header__lang-link {
+    line-height: 20px;
+    font-size: 18px;
+  }
 }
