--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,7 +1,7 @@
 .intro__list {
   margin: 0;
   padding-left: 0;
-  width: 690px;
+  width: 100%;
   height: 90px;
   list-style-type: none;
   line-height: 1.5;
