--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,9 +1,14 @@
 .intro__text {
   margin: 0 0 33px;
   width: 690px;
-  height: 208px;
   line-height: 163%;
   font-size: 16px;
   font-weight: normal;
   color: #fff;
+}
+
+@media screen and (max-width: 767px) {
+  .intro__text {
+    width: 100%;
+  }
 }
