--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -7,3 +7,12 @@
   font-weight: 900;
   color: #fff;
 }
+
+@media screen and (max-width: 767px) {
+  .intro__title {
+    line-height: 35px;
+    font-size: 32px;
+    width: 220px;
+    height: 70px;
+  }
+}
