--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,8 +1,20 @@
 .lead__caption {
   margin: 0;
-  line-height: 1.4;
+  line-height: 14px;
   font-size: 10px;
   font-weight: normal;
   letter-spacing: 1.5px;
   color: #fff;
+}
+
+@media screen and (max-width: 1023px) {
+  .lead__caption {
+    padding-left: 24px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .lead__caption {
+    padding-left: 16px;
+  }
 }
