--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -8,3 +8,13 @@
   font-weight: 900;
   color: #fff;
 }
+
+@media screen and (max-width: 767px) {
+  .lead__title {
+    margin: 0 auto 16px;
+    width: 288px;
+    height: 88px;
+    line-height: 44px;
+    font-size: 40px;
+  }
+}
