--- a/blocks/places/__description-paragraph/places__description-paragraph.css
+++ b/blocks/places/__description-paragraph/places__description-paragraph.css
@@ -10,8 +10,10 @@
   margin: 0;
 }
 
-/*@media screen and (max-width: 1279px) {
+@media screen and (max-width: 1023px) {
   .places__description-paragraph {
-
+    margin: 0 0 25px;
+    line-height: 26px;
+    font-size: 16px;
   }
-}*/
+}
