--- a/blocks/places/__description/places__description.css
+++ b/blocks/places/__description/places__description.css
@@ -1,3 +1,9 @@
 .places__description {
   grid-area: description;
 }
+
+@media screen and (max-width: 767px) {
+  .places__description {
+    padding: 0 16px;
+  }
+}
