--- a/blocks/places/__image/places__image.css
+++ b/blocks/places/__image/places__image.css
@@ -10,3 +10,15 @@
     height: 440px;
   }
 }
+
+@media screen and (max-width: 1023px) {
+  .places__image {
+    height: 340px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .places__image {
+    height: 320px;
+  }
+}
