--- a/blocks/places/__place/places__place.css
+++ b/blocks/places/__place/places__place.css
@@ -1,7 +1,6 @@
 .places__place {
   margin-bottom: 80px;
   max-width: 984px;
-  max-height: 660px;
   display: grid;
   grid-template-rows: repeat(2, minmax(min-content, max-content));
   grid-template-columns: 460px minmax(min-content, max-content);
@@ -20,5 +19,28 @@
   .places__place {
     grid-template-columns: 440px minmax(min-content, max-content);
     column-gap: 32px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .places__place {
+    margin-bottom: 73px;
+    grid-template-columns: 340px minmax(min-content, max-content);
+    column-gap: 28px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .places__place {
+    margin-bottom: 50px;
+    grid-template-rows: repeat(4, minmax(min-content, max-content));
+    grid-template-columns: 100%;
+    grid-template-areas:
+    'title'
+    'website'
+    'image'
+    'description';
+    row-gap: 32px;
+    column-gap: 0;
   }
 }
