--- a/blocks/places/__title/places__title.css
+++ b/blocks/places/__title/places__title.css
@@ -7,3 +7,21 @@
   font-weight: 900;
   color: #fff;
 }
+
+@media screen and (max-width: 1023px) {
+  .places__title {
+    line-height: 46px;
+    font-size: 42px;
+    max-width: 330px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .places__title {
+    padding: 0 16px;
+    max-width: 288px;
+    line-height: 35px;
+    font-size: 32px;
+  }
+}
+
