Refactor, change images, add readme.md

--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -2,7 +2,7 @@
   display: block;
   width: 176px;
   height: 52px;
-  background-image: url(../images/header__logo.svg);
+  background-image: url(../images/header-logo.svg);
   background-size: 100%;
 }
 
