--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,7 +1,7 @@
 .cover__subtitle {
   margin: 0 auto;
-  width: 360px;
-  height: 66px;
+  max-width: 360px;
+  min-height: 66px;
   text-align: center;
   line-height: 22px;
   font-size: 18px;
@@ -10,8 +10,8 @@
 
 @media screen and (max-width: 767px) {
   .cover__subtitle {
-    width: 260px;
-    height: 48px;
+    max-width: 260px;
+    min-height: 48px;
     line-height: 16px;
     font-size: 14px;
   }
