--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,7 +1,7 @@
 .cover__title {
   margin: 0 auto 32px;
   width: 560px;
-  height: 152px;
+  min-height: 152px;
   text-align: center;
   line-height: 76px;
   font-size: 72px;
@@ -12,7 +12,7 @@
   .cover__title {
     margin: 0 auto 16px;
     width: 250px;
-    height: 70px;
+    min-height: 70px;
     line-height: 35px;
     font-size: 32px;
   }
