--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,6 +1,6 @@
 .intro__text {
   margin: 0 0 33px;
-  width: 690px;
+  max-width: 690px;
   line-height: 163%;
   font-size: 16px;
   font-weight: normal;
