--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,7 +1,7 @@
 .intro__title {
   margin: 0 0 40px;
-  width: 690px;
-  height: 58px;
+  max-width: 690px;
+  min-height: 58px;
   line-height: 58px;
   font-size: 54px;
   font-weight: 900;
@@ -12,7 +12,7 @@
   .intro__title {
     line-height: 35px;
     font-size: 32px;
-    width: 220px;
-    height: 70px;
+    max-width: 220px;
+    min-height: 70px;
   }
 }
