--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,7 +1,7 @@
 .lead__subtitle {
   margin: 0 auto 64px;
-  width: 640px;
-  height: 72px;
+  max-width: 640px;
+  min-height: 72px;
   text-align: center;
   line-height: 1.2;
   font-size: 30px;
@@ -18,8 +18,8 @@
 @media screen and (max-width: 767px) {
   .lead__subtitle {
     margin: 0 auto 40px;
-    width: 288px;
-    height: 40px;
+    max-width: 288px;
+    min-height: 40px;
     line-height: 20px;
     font-size: 16px;
   }
