--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,7 +1,7 @@
 .lead__title {
   margin: 0 auto 32px;
-  width: 720px;
-  height: 200px;
+  max-width: 720px;
+  min-height: 200px;
   text-align: center;
   line-height: 100px;
   font-size: 96px;
@@ -12,8 +12,8 @@
 @media screen and (max-width: 767px) {
   .lead__title {
     margin: 0 auto 16px;
-    width: 288px;
-    height: 88px;
+    max-width: 288px;
+    min-height: 88px;
     line-height: 44px;
     font-size: 40px;
   }
