--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -1,4 +1,6 @@
 .root {
-  font-family: Inter, sans-serif;
+  font-family: Inter, Arial, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
   background-color: #2A2C2F;
 }
