--- a/blocks/header/_margin-bottom/header_margin-bottom.css
+++ b/blocks/header/_margin-bottom/header_margin-bottom.css
@@ -1,16 +1,15 @@
-.header_padding_top_margin_bottom {
-  padding-top: 28px;
+.header_margin-bottom {
   margin-bottom: 56px;
 }
 
 @media screen and (max-width: 1279px) {
-  .header_padding_top_margin_bottom {
+  .header_margin-bottom {
     margin-bottom: 48px;
   }
 }
 
 @media screen and (max-width: 767px) {
-  .header_padding_top_margin_bottom {
+  .header_margin-bottom {
     padding-top: 16px;
   }
 }
