--- a/blocks/cover/__card/cover__card.css
+++ b/blocks/cover/__card/cover__card.css
@@ -5,12 +5,14 @@
   align-content: center;
   box-sizing: border-box;
   max-width: 100%;
-  height: 740px;
+  min-height: 740px;
   position: relative;
   z-index: 0;
   overflow: hidden;
-  color: #fff;
   text-decoration: none;
+  background-image: url(../images/cover-trains.jpg);
+  background-size: 100%;
+  color: #fff;
 }
 
 .cover__card:before {
@@ -35,18 +37,18 @@
 
 @media screen and (max-width: 1279px) {
   .cover__card {
-    height: 640px;
+    min-height: 640px;
   }
 }
 
 @media screen and (max-width: 1023px) {
   .cover__card {
-    height: 480px;
+    min-height: 480px;
   }
 }
 
 @media screen and (max-width: 767px) {
   .cover__card {
-    height: 200px;
+    min-height: 200px;
   }
 }
